--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,20 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./*"
-      ]
+        "src/*",
+      ],
+      "@/hooks/*": [
+        "hooks/*",
+      ],
+      "@/constants/*": [
+        "constants/*",
+      ],
+      "@/assets/*": [
+        "assets/*",
+      ],
     }
   },
   "include": [
